--- a/CSS/main.css
+++ b/CSS/main.css
@@ -2,9 +2,380 @@ body {
     font-family: 'Ubuntu', sans-serif;
     background-color: white;
     color: black;
+    padding-top: 80px;
 }
 
 a {
     text-decoration: none;
     color: black;
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
+section[id] {
+    scroll-margin-top: 100px;
+}
+
+/* PERFIL */
+
+.profile {
+    text-align: center;
+}
+
+.profile h1 {
+    font-size: 36px;
+    font-weight: bold;
+    margin: 0;
+    color: black;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.profile p {
+    font-size: 18px;
+    font-weight: 450;
+    line-height: 1.3;
+}
+
+.padd-h {
+    padding-left: 25px;
+    padding-right: 25px;
+} 
+.padd-y {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    margin-bottom: 150px;
+}
+
+    /*HABILIDADES*/
+
+.habilidades {
+    max-width: 980px;
+    margin: 0 auto;
+}
+
+.habil-titulo {
+    font-size: 30px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+}
+.habilidad {
+    font-size: 20px;
+    font-weight: 450;
+    box-shadow: 0 1px 6px black;
+    border-radius: 6px;
+    margin: 16px;
+    padding: 6px;
+}
+.habil-list {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+/* EXPERIENCIA */
+
+.exps {
+    display: flex;
+    flex-direction: column;
+}
+
+.exp-body {
+    background-color: #FAD201;
+    top: -2px;
+}
+
+.wave {
+    width: 100%;
+    position: relative;
+    top: 2px;
+}
+
+.wave_bottom {
+    transform: scaleY(-1);
+}
+
+.exp-titulo {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 30px;
+    margin: 25px;
+}
+
+.exp-fecha {
+    font-size: 25px;
+    font-weight: bold;
+
+}
+
+.exp-com {
+    font-size: 20px;
+    text-transform: uppercase;
+    margin-top: 5px;
+}
+
+.exp-posc {
+    font-weight: 450;
+    font-size: 18px;
+    margin-top: 20px;
+}
+
+.exp-desc {
+    font-weight: 400;
+    font-size: 15px;
+    margin-top: 10px;
+}
+
+.exp {
+    padding: 25px;
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+/* CONTACTO */
+
+.contacto {
+    background-color: #FAD201;
+    font-size: 18px;
+    border-radius: 6px;
+    padding: 25px;
+
+    display: grid;
+    gap: 25px;
+}
+
+.contacto p,
+.contacto h2,
+.contacto ul {
+    margin: 0;
+    padding: 0;
+}
+
+.contacto-titulo {
+    font-size: 30px;
+    font-weight: 450;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.contacto-det {
+    display: grid;
+    gap: 20px;
+}
+
+.contacto-grupo,
+.contacto-form-grupo {
+    display: grid;
+    gap: 3px;
+}
+
+.contacto-label {
+    text-transform: uppercase;
+    font-weight: 450;
+}
+
+.contacto-form input,
+.contacto-form textarea {
+    border-radius: 7px;
+    border: none;
+    height: 30px;
+    padding: 5px 10px;
+}
+
+.contacto-form textarea {
+    height: auto;
+    resize: vertical;
+}
+
+.contacto-enviar {
+    width: 100%;
+    height: 50px;
+    background-color: black;
+    color: white;
+    border: 1px solid #FAD201;
+    cursor: pointer;
+}
+
+.contacto-enviar:hover {
+    box-shadow: 0 0 14px black;
+}
+
+.social-lista {
+    list-style: none;
+    display: flex;
+    gap: 25px;
+    justify-content: center;
+}
+
+.social-lista img {
+    height: 25px;
+}
+
+.social-lista img:hover {
+    filter: drop-shadow(0 0 14px black);
+}
+
+@media (min-width: 950px) {
+    .padd-h {
+        padding-left: 70px;
+        padding-right: 70px;
+    } 
+    .padd-y {
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
+    a {
+        text-decoration: none;
+        color: black;
+    }
+    
+    .profile {
+        text-align: center;
+    }
+    
+    .profile h1 {
+        font-size: 60px;
+        font-weight: bold;
+        margin: 0;
+        color: black;
+        font-family: 'Ubuntu', sans-serif;
+    }
+    
+    .profile p {
+        font-size: 25px;
+        font-weight: 450;
+        line-height: 1.3;
+
+    }
+
+    /*HABILIDADES*/
+
+    .habil-titulo {
+        font-size: 60px;
+    }
+    .habilidad {
+        font-size: 30px;
+        margin: 20px;
+    }
+    .habil-list {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    /* EXPERIENCIA */
+
+    .exp-titulo {
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 60px;
+        margin: 25px;
+    }
+    
+    .exp-fecha {
+        font-size: 40px;
+    
+    }
+    
+    .exp-com {
+        font-size: 30px;
+    }
+    
+    .exp-posc {
+        font-size: 25px;
+    }
+    
+    .exp-desc {
+        font-size: 23px;
+    }
+
+    .exp-grid {
+        display: grid;
+        grid-template-columns: auto 2px auto;
+        justify-content: center;
+    }
+
+    .linea {
+        background-color: white;
+        position: relative;
+    }
+
+    .linea::before,
+    .linea::after {
+        content: "";
+        display: block;
+        width: 20px;
+        height: 20px;
+        background-color: white;
+        border-radius: 50%;
+        position: absolute;
+        left: -9px;
+    }
+
+    .linea::after {
+        top: 100%;
+        z-index: 1;
+    }
+
+    /* CONTACTO */
+
+    .contacto {
+        font-size: 20px;
+        padding: 70px;
+        max-width: 980px;
+        margin: 0 auto;
+        box-sizing: border-box;
+    }
+
+
+    .contacto-titulo {
+        font-size: 36px;
+        text-align: left;
+    }
+
+    .social-lista {
+        justify-content: flex-start;
+    }
+
+    .social-lista img {
+        height: 40px;
+    }
+
+    .contacto-titulo {
+        grid-area: titulo;
+    }
+
+    .contacto-det {
+        grid-area: detalles;
+    }
+
+    .contacto-form {
+        grid-area: form;
+    }
+
+    .social{
+        grid-area: social;
+    }
+
+    .contacto {
+        display: grid;
+        grid:
+            "titulo form" auto
+            "detalles form" 1fr
+            "social form" auto/
+            1fr     1fr;
+        align-items: start;
+        
+
+    }
+}
+
+
